--- a/projs/idh/index.html
+++ b/projs/idh/index.html
@@ -72,7 +72,7 @@
 						"sType": "formatted-num",
 						"aTargets": [1,2,3,4,5]
 					} ],
-    "aLengthMenu": [[5, 10, 15, -1], [5, 10, 15, "All"]],
+    "aLengthMenu": [[5, 10, 15, -1], [5, 10, 15]],
     "oLanguage": {
       "sLengthMenu": "Mostrar _MENU_ países por página",
       "sZeroRecords": "Nenhum país encontrado",
